Fix top spacing of main content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,11 @@ body {
   margin-right: auto;
 }
 
+main {
+  top: -30px;
+  position: relative;
+}
+
 /* -------------- responsive widths & heights */
 @media (max-width: 1199px) {
   .wrapper {
@@ -652,7 +657,6 @@ input[type=text], input[type=submit] {
    display: flex;
    box-sizing: border-box;
    vertical-align: top;
-   margin-top: 40px;
 }
 
 .contact {
@@ -682,6 +686,7 @@ input[type=text], input[type=submit] {
 /* chosen as 992 as it makes contact page symmetric */
 @media (max-width: 992px) {
   .about-page {
+    margin-top: 40px;
     flex-direction: column;
   }
 
@@ -707,6 +712,7 @@ input[type=text], input[type=submit] {
 }
 @media (min-width: 993px) {
   .about-page {
+    margin-top: 80px;
     flex-direction: row;
   }
   .about-page > div {
